--- a/download.html
+++ b/download.html
@@ -6,11 +6,11 @@
 </head>
 
 
-<a onclick="window.location.href='itms-services://?action=download-manifest&url=https://oneccc.bid/manifest.plist'"> 
+<a onclick="window.location.href='itms-services://?action=download-manifest&url=https://192.168.28.37/manifest.plist'"> 
 	<div style="text-align:center">下载IPA</div>
 </a>
 
-<a href='itms-services://?action=download-manifest&url=https://oneccc.bid/manifest.plist'"> 
+<a href='itms-services://?action=download-manifest&url=https://192.168.28.37/manifest.plist'"> 
 	<div style="text-align:center">下载IPA2</div>
 </a>
 
